--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.5"
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.0",
+    "tailwindcss": "^3.3.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
