--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,17 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "gapi-script": "^1.2.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.0",
     "tailwindcss": "^3.3.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
