--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "dompurify": "^3.0.7",
     "gapi-script": "^1.2.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.31",
@@ -25,6 +26,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.37",
